# andiqu-yew

./: .gitignore  Cargo.toml  README.md  build.bat  deploy.sh  package-lock.json  package.json  rust-toolchain  rust-toolchain.toml  serve.bat
src/: app.rs  lib.rs
src/components/: about.rs  details.rs  footer.rs  home.rs  mod.rs  navbar.rs  typist.rs
src/routes/: fun.rs  home.rs  howitsmade.rs  mod.rs  work.rs
static/: .gitignore  index.html  index.ts  styles.css
