[package]
name = "andiqu-yew"
version = "0.1.0"
authors = ["Andi <aqu@bscglobal.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = { version="0.14.0", features = ["web_sys"] }
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

[dev-dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"

# [profile.release]
# lto = true
# opt-level = 's'
