[package]
name = "andiqu-yew"
version = "0.1.0"
authors = ["Andi <andi@andiqu.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
yew-router = { version="0.14.0", features = ["web_sys"] }
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

[dev-dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
